refactor(core): Use List interface for session and historial
The code changes refactors the return types of several methods in `HistorialService` and `SessionService` from `ArrayList` to the `List` interface, promoting better abstraction and flexibility. The corresponding tests were updated to reflect this change.